force-app/main/default/objects/ST__c/ST__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ST</label>
</CustomObject>