force-app/main/default/objects/ST__c/fields/Basic_ST_Rate__c.field-meta.xml
<CustomField>
    <fullName>Basic_ST_Rate__c</fullName>
    <label>Basic ST Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>