force-app/main/default/objects/ST__c/fields/Development_Charge_ST_Rate__c.field-meta.xml
<CustomField>
    <fullName>Development_Charge_ST_Rate__c</fullName>
    <label>Development Charge ST Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>