force-app/main/default/objects/ST__c/fields/MSEB_ST_Rate__c.field-meta.xml
<CustomField>
    <fullName>MSEB_ST_Rate__c</fullName>
    <label>MSEB ST Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>