force-app/main/default/objects/ST__c/fields/Water_Connection_ST_Rate__c.field-meta.xml
<CustomField>
    <fullName>Water_Connection_ST_Rate__c</fullName>
    <label>Water Connection ST Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>